[package]
name = "livekit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hmac = "0.11"
jwt = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
